# guardian

./: .env.example  .gitignore  Claude.md  MODULAR_LAYERED_ARCHITECTURE_CONCEPTUAL.md  NEXT_SESSION_PROMPT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml  ci.yml
agents/: database-agent.md  devops-agent.md  fastapi-agent.md  qa-agent.md  uxui-agent.md  vue-agent.md
backend/: .dockerignore  .env.example  .flake8  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  001_initial_schema_users_and_tokens.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: __init__.py  auth.py  health.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  token.py  user.py
backend/app/schemas/: __init__.py  auth.py  health.py
backend/app/services/: __init__.py  cleanup_service.py  email_service.py  jwt_service.py  rate_limit_service.py  template_service.py  token_service.py
backend/app/templates/email/: README.md
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_routes.py  test_auth_validation.py  test_cleanup_service.py  test_dependencies.py  test_email_service.py  test_health.py  test_jwt_service.py  test_rate_limit_service.py  test_security.py  test_template_service.py  test_token_service.py  test_whitelist.py
database/init-scripts/: 01-init.sql
docs/: INTEGRATION.md  MAINLINE_INTEGRATION.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
gateway/: .env.example
(+36 files in other folders)
